--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^3.4.1",
-    "file-loader": "^5.0.2",
     "live-server": "^1.2.1",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-mobile-datepicker": "^4.0.2",
+    "react-modal": "^3.11.1",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.1.2",
-    "url-loader": "^3.0.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   },
