--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "author": "Jiaping Sun",
   "license": "MIT",
   "scripts": {
-    "serve": "live-server public/",
-    "build": "webpack --watch",
-    "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
+    "serve": "live-server public",
+    "dev-server": "webpack-dev-server",
+    "build": "webpack --watch"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
@@ -16,17 +16,18 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^3.4.1",
-    "emailjs-com": "^2.4.1",
     "live-server": "^1.2.1",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-mobile-datepicker": "^4.0.2",
     "react-modal": "^3.11.1",
+    "react-router-dom": "^5.1.2",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.1.2",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   },
   "devtool": "cheap-module-eval-source-map"
 }
